Diseño y funcionalidad login ready 2

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,14 +37,14 @@
 
             <form th:action="@{/login}" method="post" class="space-y-4">
                 <div>
-                    <label for="username" class="form-label block text-sm font-medium">Correo electrónico</label>
+                    <label for="username" class="form-label block text-sm font-medium">Usuario</label>
                     <input 
                         type="text"
                         id="username"
                         name="username"
                         required
                         class="form-input mt-1 block w-full border-gray-300 rounded shadow-sm"
-                        placeholder="Correo electrónico" />
+                        placeholder="Usuario" />
                 </div>
 
                 <div class="relative">
