--- a/src/main/resources/templates/usuario/crearUsuario.html
+++ b/src/main/resources/templates/usuario/crearUsuario.html
@@ -38,7 +38,7 @@
 
             <div class="text-end">
                 <button type="submit" class="btn btn-primary">Guardar</button>
-                <a href="/usuario" class="btn btn-secondary">Cancelar</a>
+                <a th:href="@{/usuario}" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
 
@@ -46,7 +46,6 @@
     </div>
 
     <th:block layout:fragment="js">
-        <script th:src=""></script>
     </th:block>
 </body>
 
