--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -37,7 +37,7 @@
                 <!--begin::Brand-->
                 <div class="aside-logo flex-column-auto" id="kt_aside_logo">
                     <!--begin::Logo-->
-                    <a th:href="@{/}">
+                    <a th:href="@{/dashboard}">
                         <img th:src="@{/assets/media/logos/logo-demo13-compact.svg}" alt="Logo" class="h-25px logo" />
                     </a>
 
